# mdx

./: BUILD_FFI.md  CMakeLists.txt  Cargo.toml  QWEN.md  example.cpp  icu_sort_example.rs  mdx_cpp_wrapper.h  mdx_ffi.h
.qwen/: PROJECT_SUMMARY.md
src/: ffi.rs  lib.rs
src/utils/: io_utils.rs
